--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,9 @@
 		"@testing-library/jest-dom": "^5.16.3",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
-		"axios": "^0.26.1",
-		"moment": "^2.29.1",
-		"react": "^17.0.2",
+		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-moment": "^1.1.1",
-		"react-redux": "^7.2.6",
-		"react-router-dom": "^6.2.2",
-		"react-scripts": "^2.1.3",
-		"redux": "^4.1.2",
-		"redux-devtools-extension": "^2.13.9",
-		"redux-thunk": "^2.4.1",
+		"react-scripts": "5.0.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -43,5 +35,5 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:5000"
+	"proxy": "https://localhost:5000"
 }
