--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,16 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.3",
-		"@testing-library/react": "^12.1.4",
-		"@testing-library/user-event": "^13.5.0",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"react-scripts": "5.0.0",
-		"web-vitals": "^2.1.4"
+		"axios": "^0.26.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.6",
+		"react-router-dom": "^6.0.2",
+		"react-scripts": "4.0.3",
+		"redux": "^4.1.2",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.0",
+		"uuid": "^8.3.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -18,10 +21,7 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": "react-app"
 	},
 	"browserslist": {
 		"production": [
@@ -35,5 +35,5 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "https://localhost:5000"
+	"proxy": "http://localhost:5000"
 }
