--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.26.1",
+		"moment": "^2.29.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-moment": "^1.1.2",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
