--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "Shoumik Panandikar",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.27.2",
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.7",
 		"express": "^4.17.3",
@@ -20,6 +21,7 @@
 		"gravatar": "^1.8.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.8",
+		"normalize-url": "^7.0.3",
 		"request": "^2.79.0"
 	},
 	"devDependencies": {
